fix: update supporting model names collection to use stream collectors for improved readability